--- a/scss/_sumate.scss
+++ b/scss/_sumate.scss
@@ -15,22 +15,8 @@
     }
 
     .form-sumate{
-        margin: 5px 120px 5px;
+        margin: 5px 120px 5px 120px;
     }
 
-    .form-control{
-        
-
-    }
-    @media (min-width: 300px) and (max-width: 479px){ 
-    
-        width: 100%;
-        
-    }
-
-    .form{
-        
-    
-   
-}
+ 
 }
