--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -25,11 +25,12 @@
     "prod3"
     "prod4";
     padding-left: 40%;
-    padding-bottom: 8%;   
+    padding-bottom: 8%;  
 }
 
 .productos{
     display: flex;
+    justify-content: center;
     flex-direction: column;
     text-align: center;
     color: #eaf2f8;
@@ -72,18 +73,17 @@
     .div-productos{
         display: flex;
         flex-direction: column ;
-        width: 50px;
+        width: 30px;
+        padding-left: 10%;
     }
-    
-    .card-prod{
-        width: 100%;
-    }
+
 
     .form-sumate{
         display: flex;
         flex-direction: column;
         width: 200px;
     }
+    
 }
 
 @media (min-width: 480px) and (max-width: 1200px){ 
@@ -91,13 +91,10 @@
     .div-productos{
         display: flex;
         flex-direction: column;
-        width: 50px;
+        width: 30px;
+        padding: 0% 50% 0% 30%;
     }
     
-    .card-prod {
-        width: 100%;
-    }
-
     .form-sumate {
         display: flex;
         flex-direction: column;
