--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,13 +3,13 @@
 
 @import "header";
 @import "footer";
+@import "mixin";
 
 @import "sobre-nosotros";
 @import "galeria";
 @import "sumate";
 @import "contacto";
 @import "productos";
-@import "avisos-legales";
 
 //Estilos etiquetas//
 
@@ -71,26 +71,25 @@ p{
         align-items: center;
     }
 
+    .btn1{
+        border-style: double black;
+    }
+    
+    .submit-index{
+        margin: 10px 1px 10px 1px;
+        background-color:#6c7272;
+        color: turquoise;
+        border-radius: 50px;
+    }
+    
+    .centrado{
+        display: flex;
+        justify-content: center;
+        text-align: center;
+    }
     
 }
 
-
-.btn1{
-    border-style: double black;
-}
-
-.submit-index{
-    margin: 10px 1px 10px 1px;
-    background-color:#6c7272;
-    color: turquoise;
-    border-radius: 50px;
-}
-
-.centrado{
-    display: flex;
-    justify-content: center;
-    text-align: center;
-}
 
 .index{ 
     display: flex;
@@ -100,18 +99,27 @@ p{
     color: #eaf2f8;
     justify-content: space-between;
     width: 100%;
+
+    .datos{
+        margin: 5% auto 5% auto;
+        font-size: 20px;
+        grid-area: datos;
+    }
 }
 
-.datos{
-    margin: 5% auto 5% auto;
-    font-size: 20px;
-    grid-area: datos;
-}
+
 
 .formbb{
     display: flex;
     text-align: center;
     grid-area: formbb;
+
+    .ab{
+        text-decoration: none;
+        color: red;
+        cursor: pointer;
+    }
+
 }
 
 .iframe{
@@ -121,22 +129,17 @@ p{
     height: 100vh;
     grid-area: iframe;
 
-}
+    .clase-video{
+        width: 855px;
+        height: 430px;
+    }
 
-.clase-video{
-    width: 855px;
-    height: 430px;
 }
 
 .h2-grid{
     grid-area: h2-grid;
 }
 
-.ab{
-    text-decoration: none;
-    color: red;
-    cursor: pointer;
-}
 
 .nos-acompanan{
     display: flex;
@@ -157,10 +160,11 @@ p{
     grid-area: btn-wsp;
 }
 
-.sticky{
+.sticky {
     position: fixed;
     top: 300px;
-}
+  }
+
 
 .wsp{
     display: flex;
@@ -173,11 +177,13 @@ p{
 
 // cambiar hover//
 
-section img:hover{
-    cursor: crosshair;
-    width: 300px;
-    opacity: 1;
-    filter: contrast(120%);
+section img{
+    &:hover {
+        cursor: crosshair;
+        width: 300px;
+        opacity: 1;
+        filter: contrast(120%);
+    }
 }
 
 //animacion//
@@ -206,6 +212,10 @@ to{
 }
 
 @media (min-width: 480px) and (max-width: 1200px){
+
+    .navbar-toggler{
+        background-color: white;
+    }
     body{
         grid-template-columns: 1fr;
         grid-template-areas: 
@@ -267,6 +277,10 @@ to{
 
 @media (min-width: 300px) and (max-width: 479px){ 
 
+    .navbar-toggler{
+        background-color: white;
+    }
+
     body{
         grid-template-columns: 1fr;
         grid-template-areas: 
@@ -305,3 +319,4 @@ to{
     }
 
 }
+	
