--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -8,22 +8,34 @@
         display: flex;
         justify-content: center;
         text-align: center;
+
+        .form-sumate{
+            width: 550px;
+        }
+
+        .form-ta-sumate{
+            margin-top: 5%;
+        }
+
+        .form-ta-sumatesn{
+            margin-top: 5%;
+            width: 100%;
+            max-width: 100%;
+            min-height: 100px; 
+            resize: vertical;
+            box-sizing: border-box; 
+            padding: 10px; 
+            font-size: 16px;
+            line-height: 1.4;
+        }
     }
 
-    .form-sumate{
-        width: 550px;
-    }
-
-}
-
-.form-ta-sumate{
-    margin-top: 5%;
 }
 
 .submit-index{
     margin: 10px 1px 10px 1px;
     background-color:#6c7272;
-    color: turquoise;
+    color: white;
     border-radius: 50px;
 }
 
@@ -51,4 +63,8 @@
         padding-left: 30%;
     }
 
+    .form-ta-sumatesn{
+        margin-top: 5%;
+        width: 20%;
+}
 }
