--- a/scss/_galeria.scss
+++ b/scss/_galeria.scss
@@ -1,7 +1,7 @@
 @import "mixin";
 
 .titulo-galeria{
-    background-color: aqua;
+    background-color: grey;
 }
 .grid-container{
     margin: 5px;
@@ -14,6 +14,7 @@
         "img-1 img-1 img-2 img-3"
         "img-4 img-5 img-6 img-6"
         "img-7 img-8 img-8 img-9";
+        
     background-color: black;
 
     div img{
