--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -10,7 +10,7 @@
         text-align: center;
 
         .form-sumate{
-            width: 550px;
+            max-width: 95%;
         }
 
         .form-ta-sumate{
@@ -65,6 +65,6 @@
 
     .form-ta-sumatesn{
         margin-top: 5%;
-        width: 20%;
+        width: 280%;    
 }
 }
