--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,7 @@
 
 .header {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 0px;
@@ -197,8 +198,6 @@ footer .rs {
 @media (min-width: 300px) and (max-width: 479px) {
   .centrado .form-control {
     width: 20%;
-    display: flex;
-    justify-content: center;
   }
 }
 @media (min-width: 480px) and (max-width: 1199px) {
@@ -225,7 +224,7 @@ footer .rs {
   .centrado .input-group .form-ta-sumate {
     display: flex;
     justify-content: center;
-    width: 70%;
+    width: 100%;
   }
 }
 
@@ -241,7 +240,7 @@ footer .rs {
   text-align: center;
 }
 .contacto-main .centrado .form-sumate {
-  width: 550px;
+  max-width: 95%;
 }
 .contacto-main .centrado .form-ta-sumate {
   margin-top: 5%;
@@ -289,7 +288,7 @@ footer .rs {
   }
   .form-ta-sumatesn {
     margin-top: 5%;
-    width: 20%;
+    width: 280%;
   }
 }
 .satisfaccion {
